FIX: Add extra space above the aggregation menu

--- a/css/elastica.css
+++ b/css/elastica.css
@@ -27,6 +27,10 @@
 }
 
 
+.aggregationMenu h3 {
+	padding-top: 1em;
+}
+
 /* -- search results -- */
 div.searchResult {
 	clear: both;
